--- a/setupDialog.html
+++ b/setupDialog.html
@@ -25,7 +25,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="password" id="github_plugin_modal_pat" name="pat" placeholder="Personal Access Token" onblur="patChanged(this.value)"/>
+                                <input type="password" id="github_plugin_modal_pat" name="pat" placeholder="Personal Access Token" onblur="patChanged()"/>
                                 <input type="hidden" id="github_plugin_modal_pat_user" name="user"/>
                             </td>
                             <td>
@@ -69,7 +69,7 @@
                     <input type="checkbox" id="github_plugin_modal_commitOnSave" name="commitOnSave" checked="true" />
                     <label for="github_plugin_modal_commitOnSave">Commit on Save</label>
                     <br />
-                    <input type="checkbox" id="github_plugin_modal_autocommit" name="autoCommit" onchange="autoCommitChange(this)" checked="true" />
+                    <input type="checkbox" id="github_plugin_modal_autocommit" name="autoCommit" onchange="autoCommitChanged()" checked="true" />
                     <label for="github_plugin_modal_autocommit">Auto Commit</label>
                     <br />
                     <div id="github_plugin_modal_autocommit_options">
